feat(sp1): 添加Maven项目配置文件